--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "vue-i18next": "^0.9.4",
     "vue-router": "4",
     "vue-unicons": "^3.3.1",
-    "vue3-toastify": "^0.1.6"
+    "vue3-toastify": "^0.1.6",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
